--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,18 @@
             <systemPath>${project.basedir}/src/main/resources/lib/aspose-words-15.8.0.jar</systemPath>
         </dependency>
 
+        <dependency>
+            <groupId>com.deepoove</groupId>
+            <artifactId>poi-tl</artifactId>
+            <version>1.10.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
 
     </dependencies>
 
